# server/handler/OrderDishHandler.go
@@ -6,17 +6,20 @@ import (
 	"db_proj/util"
 	"fmt"
 	"github.com/gin-gonic/gin"
+	"log"
 	"net/http"
 	"strconv"
+	"time"
 )
 
 // OrderDish
 // @Summary OrderDish
 // @Description "点菜"
 // @Tags public
-// @Param dish_id query []string true "dish_id"
+// @Param table_id query string true "table_id"
+// @Param dish_id formData []string true "dish_id"
 // @Success 200 {json} {}
-// @Router /order-dish [GET]
+// @Router /order-dish [POST]
 func HandleOrderDish(ctx *gin.Context) {
 	tableIdString := ctx.Query("table_id")
 	tableId, err := strconv.ParseInt(tableIdString, 10, 32)
@@ -30,8 +33,9 @@ func HandleOrderDish(ctx *gin.Context) {
 		return
 	}
 
-	dishIdStrings := ctx.QueryArray("dish_id")
+	dishIdStrings := ctx.PostFormArray("dish_id")
 	dishIds := make([]int32, 0)
+
 	for _, dishIdString := range dishIdStrings {
 		dishId, err := strconv.ParseInt(dishIdString, 10, 32)
 		if err != nil {
@@ -46,7 +50,9 @@ func HandleOrderDish(ctx *gin.Context) {
 		dishIds = append(dishIds, int32(dishId))
 	}
 
+	log.Println("before call mstablemgrclient.CallOrderDish", time.Now())
 	resp, err := mstablemgrclient.CallOrderDish(int32(tableId), dishIds)
+	log.Println("after call mstablemgrclient.CallOrderDish", time.Now())
 	if err != nil {
 		ctx.JSON(http.StatusInternalServerError, gin.H{
 			"success": "false",
@@ -67,4 +73,7 @@ func HandleOrderDish(ctx *gin.Context) {
 		return
 	}
 
+	ctx.JSON(http.StatusOK, gin.H{
+		"success": "true",
+	})
 }
